attached_assets/Pasted-upabase-Key-eyJhbGciOiJIUzI1NiIs-2025-08-23-17-06-16-0000-4244-ERROR-expected-except-o-1755968847427_1755968847428.txt
upabase Key: eyJhbGciOiJIUzI1NiIs...
[2025-08-23 17:06:16 +0000] [4244] [ERROR] expected 'except' or 'finally' block (graph_service.py, line 672)
Traceback (most recent call last):
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 147, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/workspace/.pythonlibs/lib/python3.11/site-packages/gunicorn/util.py", line 370, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/7d088dip86hlzri9sk0h78b63yfmx0a0-python3-3.11.13/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 940, in exec_module
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/workspace/main.py", line 1, in <module>
    from app import app
  File "/home/runner/workspace/app.py", line 60, in <module>
    import routes
  File "/home/runner/workspace/routes.py", line 4, in <module>
    from api.webhook import webhook_bp
  File "/home/runner/workspace/api/__init__.py", line 3, in <module>
    from .webhook import webhook_bp
  File "/home/runner/workspace/api/webhook.py", line 6, in <module>
    from services.whatsapp_service import WhatsAppService
  File "/home/runner/workspace/services/__init__.py", line 9, in <module>
    from .graph_service import GraphService
  File "/home/runner/workspace/services/graph_service.py", line 672
    def create_graph(self, graph_type: str, title: str = None, **kwargs) -> str:
SyntaxError: expected 'except' or 'finally' block
[2025-08-23 17:06:22 +0000] [4233] [INFO] Handling signal: winch
[2025-08-23 17:06:28 +0000] [4233] [INFO] Handling signal: winch
[2025-08-23 17:07:00 +0000] [4233] [INFO] Handling signal: winch
